force-app/main/default/objects/Segment__c/Segment__c.object-meta.xml
<CustomObject>
    <description>Segment for Quote; one per calendar year (or partial). Created/updated when Quote is saved.</description>
    <label>Segment</label>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
        <length>80</length>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>