force-app/main/default/objects/Segment__c/fields/Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_Users__c</fullName>
    <label>Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>