force-app/main/default/objects/Segment__c/fields/Adoption_Rate__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Rate__c</fullName>
    <label>Adoption Rate %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>