force-app/main/default/objects/Segment__c/fields/Annual_Trans__c.field-meta.xml
<CustomField>
    <fullName>Annual_Trans__c</fullName>
    <label>Annual Trans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>