force-app/main/default/objects/Segment__c/fields/Avg_Monthly_Trans_Volume__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Trans_Volume__c</fullName>
    <label>Avg Monthly Trans Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>