force-app/main/default/objects/Segment__c/fields/DDA__c.field-meta.xml
<CustomField>
    <fullName>DDA__c</fullName>
    <label>DDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>