force-app/main/default/objects/Segment__c/fields/Transactions_as_Pct_of_DDAs__c.field-meta.xml
<CustomField>
    <fullName>Transactions_as_Pct_of_DDAs__c</fullName>
    <label>Transactions as a % of DDAs</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>